--- a/index.html
+++ b/index.html
@@ -696,6 +696,12 @@
                 provider: 'みなしお', // ← ここに提供者名を入力
                 message: '姉妹でピース！'  // ← ここがコメントになります
             }
+            // 011.png の情報（新規追加例）
+            {
+                type: 'friend',     // お友達提供
+                provider: 'けいくん', // ← 提供者名を入力
+                message: 'くうこうでピカチュウと！'  // ← コメントを入力
+            }
         ];
 
         // 画面切り替え関数
