--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
         let puzzleGrid = [];
         let gameImages = [];
         let imagesLoaded = false;
-        let unlockedPictures = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]; // 全ての絵柄を最初からアンロック
+        let unlockedPictures = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]; // 新しい絵柄も追加
         let clearedStages = []; // クリアしたステージ情報
         
         // ✏️ 画像の詳細情報（提供者とコメント）
@@ -828,7 +828,8 @@
                 'images/007.png',
                 'images/008.png',
                 'images/009.png',
-                'images/010.png'
+                'images/010.png',
+                'images/011.png'  // 新しい画像を追加
             ];
 
             let loadedCount = 0;
