--- a/index.html
+++ b/index.html
@@ -692,15 +692,15 @@
             },
             // 010.png の情報
             {
-                type: 'friend',     // お友達提供
-                provider: 'みなしお', // ← ここに提供者名を入力
-                message: '姉妹でピース！'  // ← ここがコメントになります
-            }
+                type: 'friend',
+                provider: 'みなしお',
+                message: '姉妹でピース！'
+            }, // ← このカンマが必要
             // 011.png の情報（新規追加例）
             {
-                type: 'friend',     // お友達提供
-                provider: 'けいくん', // ← 提供者名を入力
-                message: 'くうこうでピカチュウと！'  // ← コメントを入力
+                type: 'friend',
+                provider: 'けいくん',
+                message: 'くうこうでピカチュウと！'
             }
         ];
 
