--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
         let puzzleGrid = [];
         let gameImages = [];
         let imagesLoaded = false;
-        let unlockedPictures = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]; // ← 11 を追加
+        let unlockedPictures = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]; // ← 11 を追加
         let clearedStages = []; // クリアしたステージ情報
         
         // ✏️ 画像の詳細情報（提供者とコメント）
