--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@ function toggleMute() {
         {
             type: 'friend',
             provider: 'フィンくん',
-            message: 'またあそぼうね'
+            message: 'みんなにあいたいな'
         }
         ];
         
